--- a/LandParserGenerator/LandParserGenerator/LandParserGenerator.csproj
+++ b/LandParserGenerator/LandParserGenerator/LandParserGenerator.csproj
@@ -39,7 +39,8 @@
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\components\Antlr\Antlr4.Runtime.Standard.dll</HintPath>
     </Reference>
-    <Reference Include="QUT.ShiftReduceParser">
+    <Reference Include="QUT.ShiftReduceParser, Version=1.4.6.0, Culture=neutral, PublicKeyToken=402396ef6102baec, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
       <HintPath>..\components\GPPG\QUT.ShiftReduceParser.dll</HintPath>
     </Reference>
     <Reference Include="System" />
